--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "spiral-coder",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "authors": [
-    "Hongchan Choi <anonymous@example.com>"
+    "Hongchan Choi <hongchan.choi@gmail.com>"
   ],
   "description": "An element providing a code editor that renders Web Audio API JS code into an AudioBuffer using OfflineAudioContext.",
   "keywords": [
@@ -27,12 +27,14 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
     "iron-fit-behavior": "PolymerElements/iron-fit-behavior#^1.0.0",
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.0",
     "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.0",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.0",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
     "CodeMirror": "~5.4.0",
     "paper-dialog": "PolymerElements/paper-dialog#^1.0.0",
-    "paper-slider": "PolymerElements/paper-slider#^1.0.0"
+    "paper-slider": "PolymerElements/paper-slider#^1.0.0",
+    "paper-button": "PolymerElements/paper-button#^1.0.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
