--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "spiral-coder",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "authors": [
     "Hongchan Choi <hongchan.choi@gmail.com>"
   ],
@@ -31,10 +31,7 @@
     "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.2",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.4",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.3",
-    "CodeMirror": "~5.4.0",
-    "paper-dialog": "PolymerElements/paper-dialog#^1.0.1",
-    "paper-slider": "PolymerElements/paper-slider#^1.0.3",
-    "paper-button": "PolymerElements/paper-button#^1.0.3"
+    "CodeMirror": "~5.4.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
